# TPDFWarehouse

./: .dockerignore  .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: .env  celerybeat-schedule  manage.py  requirements.txt
backend/data_shop/: serializer.py  urls.py  views.py
backend/data_shop/dataservices/: celery.py  data_importer.py  file_converter.py  import_command.py  tasks.py
backend/data_shop/tasks/: processor.py
backend/his_agent/: apps.py
backend/warehouse/: __init__.py  broker.py  settings.py  urls.py
data_shop/: apps.py  serializer.py  urls.py  views.py
data_shop/tasks/: processor.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/config/: menu.config.ts
frontend/src/pages/auth/: LoginPage.tsx
frontend/src/pages/datapipelines/: tpdfwarehousePage.tsx
frontend/src/pages/reports/: ConcodanceReportPage.tsx  MonthlyReportPage.tsx  WeeklyReportPage.tsx
frontend/src/routes/: AppRoutes.tsx
warehouse/: settings.py
